--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <body>
         <header>
             <div class="inline-block" class="logo">
-                <img src="images/Logo.png">
+                <a href="https://pma-alchemist.github.io/UX_UI_HW_19/"><img src="images/Logo.png"> </a>
             </div>
             <nav class="inline-block">
                 <ul>
-                    <li class="inline-block"> Work </li>
+                    <li class="inline-block"> <a href="https://pma-alchemist.github.io/UX_UI_HW_20/"> Work </a> </li>
                     <li class="inline-block"> About </li>
                     <li class="inline-block"> Contact </li>
                 </ul>
